overflow fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,7 +27,6 @@ body {
     max-width: 1440px;
     margin: 0 auto;
     border-radius: 8px;
-    overflow: hidden;
     margin-top: 20px;
 }
 
@@ -270,6 +269,8 @@ body {
     background-size: 10px 6px;
     padding-right: 32px;
     min-width: 140px;
+    margin-right: 10px;
+    margin-top: 10px;
 }
 
 .filter-select:focus {
@@ -796,7 +797,7 @@ input:checked+.slider:before {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     width: 264px;
     height: 252px;
-    z-index: 10000;
+    z-index: 15000;
     display: none;
     margin-top: 4px;
     overflow: hidden;
@@ -2640,10 +2641,6 @@ input:checked+.slider:before {
     z-index: 1;
 }
 
-.product-item.dropdown-open {
-    z-index: 10001;
-}
-
 .product-actions {
     position: relative;
     width: 32px;
@@ -2651,8 +2648,12 @@ input:checked+.slider:before {
     z-index: 1;
 }
 
+.product-item.dropdown-open {
+    z-index: 99998;
+}
+
 .product-actions.dropdown-open {
-    z-index: 10002;
+    z-index: 99999;
 }
 
 .dropdown-menu {
@@ -2665,7 +2666,7 @@ input:checked+.slider:before {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     width: 264px;
     height: 210px;
-    z-index: 10003;
+    z-index: 99999;
     display: none;
     margin-top: 4px;
     overflow: hidden;
